ticket #186 fix overflow on layout

--- a/sites/all/themes/mnn_theme/sass/sidebars.scss
+++ b/sites/all/themes/mnn_theme/sass/sidebars.scss
@@ -118,7 +118,6 @@
           padding: 5px 0;
           margin-bottom: 3px;
           float: left;
-          width: 100%;
           @include box-sizing(border-box);
           .channel-description, .cable-channel-list {
             color: #888;
